[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oop-python-examples"
version = "0.1.0"
description = "Small, interview-ready OOP Python examples (URL shortener and token-bucket rate limiter)"
authors = [{name="Abhishek Mehta"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q"
